apps/base/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app.kubernetes.io/name: website
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: website
